fix: 프로젝트 환경 수정